kubernetes/apps/ntfy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ntfy
  namespace: apps
spec:
  selector:
    app: ntfy
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
